--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-date-picker": "^3.3.4",
+    "react-responsive-datepicker": "^1.0.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
     "swiper": "^8.4.6",
+    "tw-daterange": "^1.1.24",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
